# rag-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  BRIEF.md  Dockerfile  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  guide.html  pyproject.toml  steps.md
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
eval/: comparator.py  gate.py  hotpotqa_eval.py  hotpotqa_gold.json  hotpotqa_gold_100k.json  index.py  metrics.py
eval/results/: baseline.json  latest.json
infra/: alert_rules.yml  docker-compose.yml  observability.yml  prometheus-stack.yml  prometheus.yml  redis.yml
infra/grafana/provisioning/dashboards/: dashboard.yml  rag_engine.json
infra/postgres/: init.sql
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup
scripts/: analyze_failures.py  beir_eval.py  beir_hybrid_eval.py  benchmark.py  benchmark_faiss.py  build_100k_dataset.py  build_hnsw_index.py  build_production_index.py  diagnostics.py  download_wiki_dump.py  gen_api_keys.py  gen_phase8_pdf.py  gen_reproduction_guide.py  hotpotqa_agentic_eval.py  hotpotqa_full_eval.py  hotpotqa_hybrid_eval.py  perf_check.py  profile_target.py  run_ablation.py  run_embedder.py  run_pipeline.py  run_server.py  sample_links.py  sample_retrieval.py  seed_gold_set.py  throughput_baseline.py  throughput_batched.py  throughput_ivfpq.py  watch_embed.py
src/rag_engine/: config.py  cost.py  log.py
src/rag_engine/agent/: __init__.py  llm.py  loop.py
src/rag_engine/api/: app.py  auth.py  cache.py  metrics.py  models.py  ratelimit.py  stream.py
src/rag_engine/ingest/: downloader.py  embedder.py  parser.py  pipeline.py  schema.py
src/rag_engine/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  reranker.py
tests/: test_agent.py  test_api.py  test_break_it.py  test_downloader.py  test_embedder.py  test_faiss_properties.py  test_integration.py  test_parser.py  test_pipeline.py  test_schema.py  test_smoke.py
tests/fixtures/: sample_snapshot.jsonl
web/: index 2.html  index.html
