[project]
name = "rag-engine"
version = "0.1.0"
description = "Production-grade RAG system: FAISS indexing, agentic multi-hop reasoning, eval-gated CI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.2",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "llama-cpp-python>=0.3.28",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.3",
    "bm25s>=0.2.12",
    "sentence-transformers>=5.5.1",
    "structlog>=24.1",
    "tqdm>=4.68.2",
    "transformers>=5.0.0rc3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "py-spy>=0.4.2",
    "pytest>=8.2",
    "reportlab>=4.5.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_engine"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["rag_engine"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# FAISS property tests build large in-memory indexes and must run in isolation.
# Run them with: pytest tests/test_faiss_properties.py
addopts = "--ignore=tests/test_faiss_properties.py"
